# art-scripts

./: .gitignore  archive.py  auto_backup.py  convert.py  copy_to_archive.py  flake.nix  pyproject.toml  requirements.txt  shell.nix
art_scripts/: archive.py  blender_export.py  copy_to_archive.py
src/: archive.py  del_frames.py  hash_rename.py  movie_export.py
