[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "art-scripts"
version = "1.0.1"
description = ""
license = { text="MIT" }
authors = [ { name="cromachina" } ]
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python",
    "pillow",
]

[project.scripts]
art-archive = "art_scripts.archive:main"
art-copy-to-archive = "art_scripts.copy_to_archive:main"

[tool.setuptools.packages.find]
where = ["./."]
